create user testimonials component

--- a/vite-project/src/CSS/home.css
+++ b/vite-project/src/CSS/home.css
@@ -50,4 +50,9 @@
     height: 40px;
     border-radius: 5px;
 }
+.ex-btn:hover{
+    background: #ff9f45;
+  transform: translateY(-3px);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+}
 
