--- a/vite-project/src/CSS/nav.css
+++ b/vite-project/src/CSS/nav.css
@@ -133,7 +133,9 @@
   position: relative;
   cursor: pointer;
 }
-
+.profilelink{
+  text-decoration: none;
+}
 .profile-circle {
   width: 38px;
   height: 38px;
